show tiny video on mobile; fix link for deats

--- a/frontend/src/pages/ExploreData/ExploreDataPage.module.scss
+++ b/frontend/src/pages/ExploreData/ExploreDataPage.module.scss
@@ -138,15 +138,12 @@ button[data-action="back"] {
 }
 
 .NoTopicHelperVideoBox {
-  display: none;
-
-  @media (min-width: $sm) {
-    display: block;
+  iframe {
+    height: 157px;
+    width: 250px;
   }
 
   @media (min-width: $lg) {
-    display: block;
-
     iframe {
       height: 252px;
       width: 400px;
@@ -154,8 +151,6 @@ button[data-action="back"] {
   }
 
   @media (min-width: $xl) {
-    display: block;
-
     iframe {
       height: 378px;
       width: 600px;
@@ -182,8 +177,28 @@ button[data-action="back"] {
 }
 
 .SuggestedReportsList {
-  list-style: none;
   text-align: left;
   font-size: $text;
   line-height: $lhSuperLoose;
+
+  list-style: none;
+
+  li::before {
+    content: "→ ";
+    color: $alt-green;
+  }
+
+  padding-left: 0px;
+
+  @media only screen and (min-width: $sm) {
+    padding-left: 40px;
+  }
+}
+
+.SuggestedReportsListItem a {
+  text-decoration: none;
+}
+
+.Thumbnail {
+  width: 300px;
 }
